# lazypdf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
lazypdf/: __init__.py  _converters.py  _operations.py  _pages.py  _security.py  _text.py  core.py  utils.py
tests/: conftest.py  test_converters.py  test_core.py  test_new_features.py  test_office.py  test_operations.py  test_pages.py  test_security.py  test_text.py  test_v040_features.py  test_validation.py
